--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@
 DATA_DIR: data/
 
 FORMAT: 2019
-WEIGHT1: resources/weights/FL.t.old.hd5
+WEIGHT1: /home/socolovsky_lab/ccount/dev2021/neg_training/FL.t.withNeg.hdf5
 WEIGHT2: None
 
 I: [1,2,3,4]
@@ -32,14 +32,14 @@ overlap: .8
 # training and classification
 numClasses: 2  # if 2, all other than 1 will be zero
 classification_equalization: False  # wether use equ for model training/classification
-clas_scaling_factor: 2  # input scale down for model training
+clas_scaling_factor: 1  # input scale down for model training
 r_ext_ratio: 1.0  # larger (1.4) for better view under augmentation
 r_ext_pixels: 0
 # training only
 aug_sample_size: 2000
 training_ratio: 0.7  # proportion of data to be in training set during split
 batch_size: 64  # default 64
-epochs: 30 # default 30
+epochs: 300 # default 30
 patience: 3  # default 50
 learning_rate: 0.0001  # default 0.0001 (Adam)
 verbose: 2  # {0, 1, 2}
