--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,5 @@
 ## User params ## 
+# data curve patience5, augmentation 80k
 
 DATA_DIR: data/  # for czi files
 
@@ -6,9 +7,6 @@ FORMAT: 2019 # 2019
 I: [1,2,3,4] # all valid index options for czi file
 
 WEIGHT1: trained.hdf5 # for classification input
-
-
-
 
 ## Advanced params ##
 # (Please don't change unless you're developer)
@@ -32,15 +30,15 @@ crop_width: 80  # padding width, which is cropped img width/2 (50), in blob_crop
 # training and classification
 numClasses: 2  # if 2 is selected, 3[uncertain] 4[artifacts] will be 0; 5[unlabeled] will be discarded at all times
 classification_equalization: True  # for training/classification
-balancing: True
 clas_scaling_factor: 2  # input scale down factor for training/classification
 r_ext_ratio: 1.4  # larger (1.4) for better view under augmentation
 r_ext_pixels: 10
 # training only
-aug_sample_size: 50000
+balancing: True
+aug_sample_size: 80000
 batch_size: 256  # default 256
-epochs: 30 # default 30
-patience: 2  # default 2
+epochs: 50 # default 30
+patience: 5  # default 2
 learning_rate: 0.001  # default 0.001 (Adam)
 verbose: 2  # {0, 1, 2} 
 
