--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -15,12 +15,12 @@ rule targets:
     input:
         czi2img=expand("log/img/{s}.done", s=SAMPLES), 
         blob_detection=expand("log/blob_locs/{s}.done", s=SAMPLES),
-        blob_cropping=input_names(prefix="res/blob_crops/", SAMPLES=SAMPLES, 
-                                  suffix='.crops.npy.gz'),
-        classification=input_names(prefix='res/classification1/', SAMPLES=SAMPLES,
-                                   suffix=".crops.clas.txt"),
-        filter_crops=input_names(prefix='res/classification1/pos/', SAMPLES=SAMPLES,
-                                 suffix=".crops.clas.npy.gz"),
+#        blob_cropping=input_names(prefix="res/blob_crops/", SAMPLES=SAMPLES, 
+#                                 suffix='.crops.npy.gz'),
+#        classification=input_names(prefix='res/classification1/', SAMPLES=SAMPLES,
+#                                   suffix=".crops.clas.txt"),
+#        filter_crops=input_names(prefix='res/classification1/pos/', SAMPLES=SAMPLES,
+#                                 suffix=".crops.clas.npy.gz"),
         count_file='res/COUNT.csv',
         area1_agg="res/areas.csv",
         view_clas_on_image=input_names(prefix="res/classification1/", SAMPLES=SAMPLES,
@@ -76,7 +76,7 @@ rule blob_cropping:
         czi='data/{s}.czi',
         blob_locs_flag="log/blob_locs/{s}.done"
     output:
-        'res/blob_crops/{s}.{i}.crops.npy.gz'
+        temp('res/blob_crops/{s}.{i}.crops.npy.gz')
     threads:
         1
     resources:
