--- a/workflow/env/ccount.yaml
+++ b/workflow/env/ccount.yaml
@@ -1,4 +1,4 @@
-name: ccount-env
+name: ccount-gpu
 # conda env create -f ccount.yaml
 
 channels:
@@ -7,23 +7,25 @@ channels:
         - anaconda
 
 dependencies:
-        - python=3.6
-        - pandas
-        - imgaug
-#        - opencv
-        - scikit-image
-        - jupyter
-        - keras
-        - scikit-learn
-        - cmake
-        - czifile
-        - tensorflow
+        - python #=3.6
+
+        # conda forge
+        - conda-forge::tensorflow-gpu
+        - conda-forge::keras
+        - conda-forge::imgaug=0.4.0
+        - conda-forge::czifile=2019.7.2
+
 
         # bioconda
-        - snakemake
+        - bioconda::snakemake=6.7.0
+
         # anaconda
-        - pillow
-#        - runipy
+        - anaconda::pandas=1.1.5
+        - anaconda::scikit-image=0.17.2
+        - anaconda::scikit-learn=0.24.2
+        - anaconda::pillow=8.3.1
+        - anaconda::cmake
+        - anaconda::jupyter
 
 
 # `git clone https://github.com/DmitryUlyanov/Multicore-TSNE.git; cd Multicore-TSNE/; pip install .` # missed in env.yaml, skipped
