--- a/config.data_curve.yaml
+++ b/config.data_curve.yaml
@@ -1,4 +1,4 @@
 DATA_TRAIN: data/yung.13500.train.npy.gz
 DATA_VAL: data/yung.13500.val.npy.gz
-sampling_rates: [.1, .2, .4, .5, .6, .7, .8, .9]
-CCOUNT_CONFIG: config.patience5.yaml
+sampling_rates: [.00625, .0125, .025, .05, .1, .2, .4, .8, 1.0]
+CCOUNT_CONFIG: config.yaml
