--- a/workflow/env/ccount.yaml
+++ b/workflow/env/ccount.yaml
@@ -1,31 +1,39 @@
 name: ccount-env
 # conda env create -f ccount.yaml
+# pip install aicspylibczi
+# don't change version of packages untill necessary
 
 channels:
-        - conda-forge
-        - bioconda
         - anaconda
+        - bioconda
+        - conda-forge
+        #- nvidia
 
 dependencies:
-        - python #=3.6
+        - python=3.8 # must use
+
+        # anaconda
+        - anaconda::pandas=1.1.5
+        - anaconda::scikit-image=0.17.2
+        - anaconda::scikit-learn=0.24.2
+        - anaconda::pillow=8.3.1
+        - anaconda::cmake
+
+        # bioconda
+        - bioconda::snakemake
 
         # conda forge
         - conda-forge::tensorflow-gpu
         - conda-forge::keras
         - conda-forge::imgaug=0.4.0
-        - conda-forge::czifile=2019.7.2
+        - conda-forge::aicsimageio
+#        - conda-forge::scikit-learn-intelex # improve scikit-learn speed
 
+# after this must do pip install aicspylibczi>=3.0.5
 
-        # bioconda
-        - bioconda::snakemake=6.7.0
-
-        # anaconda
-        - anaconda::pandas #=1.1.5
-        - anaconda::scikit-image=0.17.2
-        - anaconda::scikit-learn #=0.24.2
-        - anaconda::pillow #=8.3.1
-        - anaconda::cmake
-        - anaconda::jupyter
+        # nvidia       
+        #- nvidia::cuda-toolkit 
+        
 
 
 # `git clone https://github.com/DmitryUlyanov/Multicore-TSNE.git; cd Multicore-TSNE/; pip install .` # missed in env.yaml, skipped
