--- a/config.data_curve.yaml
+++ b/config.data_curve.yaml
@@ -1,4 +1,5 @@
-DATA_TRAIN: data/yung.13500.train.npy.gz
-DATA_VAL: data/yung.13500.val.npy.gz
-sampling_rates: [.00625, .0125, .025, .05, .1, .2, .4, .8, 1.0]
+DATA_TRAIN: npy/run4_BM_FL_PFA.ruiV1.npy.gz
+DATA_VAL: npy/PFA.ruiv1.realistic.val.npy.gz
+#sampling_rates: [.00625, .0125, .025, .05, .1, .2, .4, .8, 1.0]
+sampling_rates: [.25, .5, 1.0]
 CCOUNT_CONFIG: config.yaml
