added graphviz for dot for dag

--- a/workflow/env/mac.yaml
+++ b/workflow/env/mac.yaml
@@ -25,6 +25,7 @@ dependencies:
   - scikit-image
   - imgaug
   - aicsimageio
+  - graphviz
   - pip:
      - tensorflow-macos
      - tensorflow-metal
