--- a/workflow/env/mac.yaml
+++ b/workflow/env/mac.yaml
@@ -1,14 +1,18 @@
-name: ccount
+name: ccount_metal
 channels:
   - apple
   - conda-forge
   - bioconda
+subdirs:
+  - osx-arm64
+  - osx-64
+  - noarch
 
 dependencies:
-  - python=3.10
+  - python=3.12
   - pip>=19.0
   - jupyter
-  - bioconda::snakemake
+  - bioconda::snakemake=8.18
   - scikit-learn
   - scipy
   - pandas
@@ -28,7 +32,7 @@ dependencies:
   - graphviz
   - pip:
      - tensorflow-macos
-     - tensorflow-metal
+#     - tensorflow-metal
      - bayesian-optimization
      - gym
      - kaggle
