blob_detection_visualization: True  removed from config.yaml

--- a/workflow/env/mac.yaml
+++ b/workflow/env/mac.yaml
@@ -1,6 +1,7 @@
 name: ccount
 # run `conda-env create -f mac.yaml` for installation of the env
 # run `pip install aicspylibczi` after that
+# `pip install --upgrade yte plac`
 
 channels:
   - defaults
