load_locs and load_crops becomes load_locs

--- a/workflow/env/mac.yaml
+++ b/workflow/env/mac.yaml
@@ -36,6 +36,7 @@ dependencies:
   - imgaug
   - aicsimageio
   - graphviz
+  - seaborn # for jupyterlab, EpoCurve (optional for main ccount`)
   - pip:
      - tensorflow-macos
 #     - tensorflow-metal
