--- a/config.yaml
+++ b/config.yaml
@@ -41,7 +41,9 @@ batch_size: 512  # default 256
 epochs: 100 
 patience: 3  
 learning_rate: 0.001  # default 0.001 (Adam)
-verbose: 2  # {0, 1, 2} 
+verbose: 2  # {0, 1, 2}
+# classification(counting) only
+MIN_P: 0.1  # minimum probability for classification, e.g. 0.5, 0.1
 
 # Notes
 
